added game over test and displaying score

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <h1 style="color:white">Space invaders</h1>
     <div id="game-container" class="game-container">
-
     </div>
+    <div id="score" class="score"></div>
+    <div id="gameover" class="gameover">GAME OVER</div>
+    
     <script src="script.js"></script>
   </body>
 </html>
