--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Space Invaders</title>
   </head>
   <body>
     <h1 style="color:white">Space invaders</h1>
